@@ -61,7 +61,6 @@ can be moved into the library of ATS. Please contribute!
 <MENU>
 
 <LI><A href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/contrib/linstacklst"><B>Linear Stack</B></A>
-(<A href="contrib/linstacklst/linstacklst_sats.html">sats</A>)
 (<A href="contrib/linstacklst/linstacklst_dats.html">dats</A>)
 A linear stack implementation based on lists.
 
@@ -73,6 +72,11 @@ A functional array implementation based on Braun trees.
 href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/contrib/funset_avltree"><B>Functional Set</B></A>
 (<A href="contrib/funset_avltree/funset_avltree_dats.html">dats</A>)
 A functional set implementation based on AVL trees.
+
+<LI><A
+href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/contrib/funmap_avltree"><B>Functional Map</B></A>
+(<A href="contrib/funmap_avltree/funmap_avltree_dats.html">dats</A>)
+A functional association map implementation based on AVL trees.
 
 <LI><A href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/contrib/funrbtree"><B>Functional Red-Black Tree</B></A>
 (<A href="contrib/funrbtree/funrbtree_dats.html">dats</A>)
