@@ -1,3 +1,14 @@
+ats-lang-anariats-0.1.0:
+
+1. The syntax for template implementation is changed:
+   previous syntax: implement foo<a,b><c> (...) = ...
+   current  syntax: implement{a,b}{c} foo (...) = ...
+
+2. It is now allowed to implement a special template instantiation:
+   implement foo<double,string><int> (...) = ...
+
+########################################################################
+
 ats-lang-anariats-0.0.2:
 
 1. fixed a bug affecting [nonfix] declarations.
